# flywatch

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  fly.toml  flywatch.db-shm  flywatch.db-wal  package.json
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/app/: globals.css
frontend/components/: chat-response.tsx  database-placeholder.tsx  floating-chat-bar.tsx  log-filter-bar.tsx  log-stream.tsx  stats-card.tsx  stats-grid.tsx  system-metrics.tsx  theme-provider.tsx
frontend/components/ui/: sonner.tsx
frontend/hooks/: use-chat.ts  use-logs.ts  use-metrics.ts  use-stats.ts
frontend/lib/api/: chat.ts  client.ts  index.ts  logs.ts  metrics.ts  stats.ts
frontend/lib/constants/: config.ts
frontend/lib/types/: api.ts  index.ts  stats.ts  ui.ts
frontend/lib/utils/: format.ts  log-filter.ts  log-parser.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
src/: chat.rs  config.rs  http.rs  log_buffer.rs  main.rs  metrics.rs  nats.rs  pricing.rs  prompt.rs  usage.rs
stoar/: Cargo.toml
