[package]
name = "flywatch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# NATS client
async-nats = "0.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }

# HTTP client for OpenRouter
reqwest = { version = "0.12", features = ["json"] }

# Metrics
sysinfo = "0.32"

# Persistence (SQLite-based storage)
stoar = { path = "./stoar" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
